# clippt

./: README.md
.github/workflows/: release-desktop.yml
docs/: ARCHITECTURE.md
src-tauri/: Cargo.toml  entitlements.mac.plist  tauri.conf.json
src-tauri/src/: action.rs  listener.rs  main.rs  persistence.rs  persistence_worker.rs  privacy.rs  settings.rs  state.rs  ui.rs
tauri-plugin-egui/: Cargo.toml  SHIM_NOTES.md
tauri-plugin-egui/src/: lib.rs
