[package]
name = "clippt"
version = "0.1.0"
edition = "2021"
description = "A fast, cross-platform clipboard manager"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.5", features = ["system-tray", "icon-png"] }
tauri-plugin-egui = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.27"
arboard = "3.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[dev-dependencies]
tempfile = "=3.23.0"
