[package]
name = "clippt"
version = "0.1.0"
edition = "2021"
description = "A local-first clipboard manager with bounded memory, opt-in persistence, and privacy-aware filtering"
authors = ["Clippt Contributors"]
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "=1.5.6", features = [] }

[dependencies]
tauri = { version = "=1.8.1", features = ["system-tray", "icon-png", "global-shortcut-all", "window-hide", "window-set-focus", "window-show"] }
arboard = "=3.6.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
anyhow = "=1.0.100"
log = "=0.4.28"
env_logger = { version = "=0.11.8", default-features = false, features = ["auto-color", "humantime"] }

[dev-dependencies]
tempfile = "=3.23.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
